Fix blurry SVGs

--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,7 @@ body {
 body {
   max-width: 50rem;
   margin: 2rem auto;
+  padding: 0 2rem;
 }
 
 hr {
@@ -83,10 +84,11 @@ hr {
       content: '';
       background-color: transparent;
       background-image: url('icon-node-straight.svg');
+      background-size: 2rem;
       display: block;
       position: absolute;
       left: 0;
-      top: 0rem;
+      top: 0;
       width: 2rem;
       height: 100%;
     }
@@ -95,6 +97,7 @@ hr {
       content: '';
       background-color: transparent;
       background-image: url('icon-node-elbow.svg');
+      background-size: 2rem;
       display: block;
       position: absolute;
       left: 0;
